@@ -1,0 +1,8 @@
+<header>Enable redirect for</header>
+
+For domains with an SSL website enabled, these checkboxes can be used to
+select if the redirect will be enabled for the SSL website, non-SSL site, or
+both. This can be useful for creating a redirect that forces all users to
+connect in SSL mode, for example. <p>
+
+<footer>
