@@ -1439,3 +1439,4 @@ The port used in URLs can now be set independently of the actual port, so that U
 ---- Changes since 4.06 ----
 Updated the Node.js script installer to version 0.10.26, Pydio to 5.2.2, Zikula to 1.3.7, MediaWiki to 1.22.3, Feng Office to 2.5.1.1, Mantis to 1.2.17, PiWik to 2.1.0, ownCloud to 6.0.2, and phpMyAdmin to 4.1.9.
 Added Norwegian translation updates, thanks to Stein-Aksel Basma.
+Aliases and redirects can now be separately enabled for the SSL and non-SSL websites of a virtual server.
